# master_c

./: .gitignore  CMakeLists.txt
include/: util.h
src/: hello_world.c  util.c
